--- a/index.html
+++ b/index.html
@@ -2,29 +2,29 @@
 <html lang="ja">
   <head>
     <meta charset="UTF-8" />
-    <title>課題①</title>
+    <!-- CSSファイルの読み込み -->
     <link rel="stylesheet" href="style.css" />
+    <title>提出用</title>
   </head>
 
   <body>
-    <h1>サービス紹介</h1>
-    <h2>webcamp</h2>
-    <p>
-      マンツーマンサポートによる学習で、確実にWebスキルを習得できるプログラミングスクールです。
-    </p>
-    <a href="https://web-camp.io/">webサイト</a>
-    <h2>webcamp pro</h2>
-    <p>未経験から転職を保証する日本で唯一のプログラミングスクールです。</p>
-    <a href="https://web-camp.io/">webサイト</a>
-    <h2>webcamp woman</h2>
-    <p>
-      家庭も仕事も頑張りたい主婦・ママ向けの、1か月のWebサイトを制作するWebデザインスクールです。
-    </p>
-    <a href="https://web-camp.io/">webサイト</a>
-    <h2>webcamp vareer</h2>
-    <p>
-      3000名のエンジニアをサポートしてきたエージェントがあなたの転職をサポート。
-    </p>
-    <a href="https://web-camp.io/">webサイト</a>
+    <!-- header用のdiv -->
+
+    <div class="header">
+      <div class="header-top"></div>
+      <div class="header-bottom"></div>
+    </div>
+
+    <!-- main用のdiv -->
+
+    <div class="main">
+      <div class="main1">
+        <div class="main2"></div>
+      </div>
+    </div>
+
+    <!-- footer用のdiv -->
+
+    <div class="footer"></div>
   </body>
 </html>
