--- a/index.html
+++ b/index.html
@@ -4,41 +4,55 @@
     <meta charset="UTF-8" />
     <!-- CSSファイルの読み込み -->
     <link rel="stylesheet" href="style.css" />
-    <title>CARAVAN</title>
+    <title>Infratop</title>
   </head>
 
   <body>
     <!-- header -->
-
     <header>
       <h1 class="heading">
-        <a href="index.html"> CARAVAN </a>
+        <a href="index.html"> infratop </a>
       </h1>
     </header>
 
     <!-- navigation -->
-
     <nav>
       <ul class="nav-list">
         <li class="nav-list-item">
-          <a href="index.html"> Home </a>
+          <a href="index.html"> webcamp </a>
         </li>
-        <li class="nav-list-item">About</li>
-        <li class="nav-list-item">Topic</li>
+        <li class="nav-list-item">
+          <a href="index.html"> webcamp pro</a>
+        </li>
+        <li class="nav-list-item">
+          <a href="index.html"> webcamp woman</a>
+        </li>
+        <li class="nav-list-item">
+          <a href="index.html"> webcamp career</a>
+        </li>
       </ul>
     </nav>
 
-    <!-- main-visual用のdiv -->
-
-    <div class="main-visual">
-      <div class="main-visual-content"></div>
-    </div>
-
     <!-- main用のdiv -->
-
     <div class="main">
-      <div class="blog"></div>
-      <div class="sidebar"></div>
+      <div class="main1">
+        <div class="box1"></div>
+        <div class="box2"></div>
+        <div class="box3"></div>
+        <div class="box4"></div>
+      </div>
+      <div class="main2">
+        <div class="box5"></div>
+        <div class="box6"></div>
+        <div class="box7"></div>
+        <div class="box8"></div>
+      </div>
+      <div class="main3">
+        <div class="box9"></div>
+        <div class="box10"></div>
+        <div class="box11"></div>
+        <div class="box12"></div>
+      </div>
     </div>
 
     <!-- footer -->
