--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8" />
     <!-- CSSファイルの読み込み -->
     <link rel="stylesheet" href="style.css" />
-    <title>Infratop</title>
+    <title>CARAVAN</title>
   </head>
 
   <body>
     <!-- header -->
     <header>
       <h1 class="heading">
-        <a href="index.html"> infratop </a>
+        <a href="index.html"> CARAVAN </a>
       </h1>
     </header>
 
@@ -19,40 +19,30 @@
     <nav>
       <ul class="nav-list">
         <li class="nav-list-item">
-          <a href="index.html"> webcamp </a>
+          <a href="index.html">Home</a>
         </li>
-        <li class="nav-list-item">
-          <a href="index.html"> webcamp pro</a>
-        </li>
-        <li class="nav-list-item">
-          <a href="index.html"> webcamp woman</a>
-        </li>
-        <li class="nav-list-item">
-          <a href="index.html"> webcamp career</a>
-        </li>
+        <li class="nav-list-item">About</li>
+        <li class="nav-list-item">Topic</li>
       </ul>
     </nav>
 
+    <!-- main-visual用のdiv -->
+    <div class="main-visual">
+      <div class="main-visual-content">
+        <!-- pタグ（と文字）を追加 -->
+        <p class="main-visual-text">
+          The world is a book</br>
+          and those who do not travel</br>
+          read only one page.
+        </p>
+        <p class="main-visual-name">St. Augustine</p>
+      </div>
+    </div>
+
     <!-- main用のdiv -->
     <div class="main">
-      <div class="main1">
-        <div class="box1"></div>
-        <div class="box2"></div>
-        <div class="box3"></div>
-        <div class="box4"></div>
-      </div>
-      <div class="main2">
-        <div class="box5"></div>
-        <div class="box6"></div>
-        <div class="box7"></div>
-        <div class="box8"></div>
-      </div>
-      <div class="main3">
-        <div class="box9"></div>
-        <div class="box10"></div>
-        <div class="box11"></div>
-        <div class="box12"></div>
-      </div>
+      <div class="blog"></div>
+      <div class="sidebar"></div>
     </div>
 
     <!-- footer -->
