--- a/index.html
+++ b/index.html
@@ -2,52 +2,15 @@
 <html lang="ja">
   <head>
     <meta charset="UTF-8" />
-    <!-- CSSファイルの読み込み -->
+    <title>課題⑥</title>
     <link rel="stylesheet" href="style.css" />
-    <title>CARAVAN</title>
   </head>
 
   <body>
-    <!-- header -->
-    <header>
-      <h1 class="heading">
-        <a href="index.html"> CARAVAN </a>
-      </h1>
-    </header>
-
-    <!-- navigation -->
-    <nav>
-      <ul class="nav-list">
-        <li class="nav-list-item">
-          <a href="index.html">Home</a>
-        </li>
-        <li class="nav-list-item">About</li>
-        <li class="nav-list-item">Topic</li>
-      </ul>
-    </nav>
-
     <!-- main-visual用のdiv -->
-    <div class="main-visual">
-      <div class="main-visual-content">
-        <!-- pタグ（と文字）を追加 -->
-        <p class="main-visual-text">
-          The world is a book</br>
-          and those who do not travel</br>
-          read only one page.
-        </p>
-        <p class="main-visual-name">St. Augustine</p>
-      </div>
-    </div>
-
-    <!-- main用のdiv -->
-    <div class="main">
-      <div class="blog"></div>
-      <div class="sidebar"></div>
-    </div>
-
-    <!-- footer -->
-    <footer>
-      <p class="footer-text">© All rights reserved by Infratop.Inc.</p>
-    </footer>
+    <div class="main-visual1"></div>
+    <div class="main-visual2"></div>
+    <div class="main-visual3"></div>
+    <div class="main-visual4"></div>
   </body>
 </html>
