--- a/index.html
+++ b/index.html
@@ -1,67 +1,176 @@
-<<<<<<< HEAD
 <!DOCTYPE html>
 <html lang="ja">
   <head>
     <meta charset="UTF-8" />
     <!-- CSSファイルの読み込み -->
     <link rel="stylesheet" href="style.css" />
-    <title>課題⑦</title>
+    <title>CARAVAN</title>
   </head>
 
   <body>
     <!-- header -->
     <header>
       <h1 class="heading">
-        <a> サービス紹介 </a>
+        <a href="index.html"> CARAVAN </a>
       </h1>
     </header>
 
+    <!-- navigation -->
+    <nav>
+      <ul class="nav-list">
+        <li class="nav-list-item">
+          <a href="index.html">Home</a>
+        </li>
+        <li class="nav-list-item">About</li>
+        <li class="nav-list-item">Topic</li>
+      </ul>
+    </nav>
+
+    <!-- main-visual用のdiv -->
+    <div class="main-visual">
+      <div class="main-visual-content">
+        <p class="main-visual-text">
+          The world is a book<br />
+          and those who do not travel<br />
+          read only one page.
+        </p>
+        <p class="main-visual-name">St. Augustine</p>
+      </div>
+    </div>
+
     <!-- main用のdiv -->
     <main>
-      <div class="blog-box">
-        <div class="blog-item1">
-          <img class="blog-image" src="img/wc-logo.png" />
-          <div class="blog-text">
-            <p>
-            マンツーマンサポートによる学習で、<br />
-            確実にWebスキルを習得できるプログラミングスクールです。
+      <section class="blog">
+        <h2 class="blog-heading">Recent Blogs</h2>
+        <div class="blog-box">
+          <div class="blog-item">
+            <img class="blog-image" src="img/forest.jpg" />
+            <section class="blog-text">
+              <h3 class="blog-text-heading">
+                <a href="single.html">
+                  Hopeful lessons from<br />
+                  the battle to save<br />
+                  rainforests
+                </a>
+              </h3>
+              <p class="blog-date">June 19, 2017</p>
+              <span class="category">Nature</span>
+            </section>
+          </div>
+          <div class="blog-item">
+            <img class="blog-image" src="img/desert.jpg" />
+            <section class="blog-text">
+              <h3 class="blog-text-heading">
+                <a href="single.html">
+                  How to fight<br />
+                  desertification and<br />
+                  reverse climate change
+                </a>
+              </h3>
+              <p class="blog-date">June 17, 2017</p>
+              <span class="category">Nature</span>
+            </section>
+          </div>
+          <div class="blog-item">
+            <img class="blog-image" src="img/sunset.jpg" />
+            <section class="blog-text">
+              <h3 class="blog-text-heading">
+                <a href="single.html">
+                  Why I'm rowing<br />
+                  across the Pacific
+                </a>
+              </h3>
+              <p class="blog-date">June 16, 2017</p>
+              <span class="category">Adventure</span>
+            </section>
+          </div>
+          <div class="blog-item">
+            <img class="blog-image" src="img/italy.jpg" />
+            <section class="blog-text">
+              <h3 class="blog-text-heading">
+                <a href="single.html">
+                  Unseen footage,<br />
+                  untamed nature
+                </a>
+              </h3>
+              <p class="blog-date">June 15, 2017</p>
+              <span class="category">Nature</span>
+            </section>
+          </div>
+          <div class="blog-item">
+            <img class="blog-image" src="img/asia.jpg" />
+            <section class="blog-text">
+              <h3 class="blog-text-heading">
+                <a href="single.html">
+                  The case for<br />
+                  engineering our food
+                </a>
+              </h3>
+              <p class="blog-date">June 14, 2017</p>
+              <span class="category">Culture</span>
+            </section>
+          </div>
+        </div>
+        <div class="pagination">
+          <p><<</p>
+          <p><</p>
+          <p>1</p>
+          <p>2</p>
+          <p>3</p>
+          <p>></p>
+          <p>>></p>
+        </div>
+      </section>
+      <div class="sidebar">
+        <section class="popular">
+          <h2 class="sidebar-heading common-heading">Popular</h2>
+          <div class="sidebar-contents">
+            <p class="popular-text">
+              To solve old problem,<br />study new species
             </p>
-            <a href="https://web-camp.io/"> webサイト</a>
-          </div>
-        </div>
-        <div class="blog-item">
-          <img class="blog-image" src="img/wcp-logo.png" />
-          <div class="blog-text">
-            <p>
-            未経験から転職を保証する<br />
-            日本で唯一のプログラミングスクールです。
+            <p class="popular-text">
+              Why Earth may someday<br />look like Mars
             </p>
-            <a href="http://web-camp.io/pro/"> webサイト</a>
+            <p class="popular-text">
+              What will humans look<br />like in 100 years?
+            </p>
+            <p class="popular-text">
+              How to grow a forest<br />in your backyard
+            </p>
+            <p class="popular-text">
+              How humans could evolve<br />to survive in space
+            </p>
           </div>
-        </div>
-        <div class="blog-item">
-          <img class="blog-image" src="img/wcw-logo.png" />
-          <div class="blog-text">
-              <p>
-              家庭も仕事も頑張りたい主婦・ママ向けの、<br />
-              1か月でWebサイトを作成するWebデザインスクールです。
-              </p>
-            <a href="http://web-camp.io/woman/"> webサイト</a>
+        </section>
+        <section class="instagram">
+          <h2 class="instagram-heading common-heading">Instagram</h2>
+          <div class="sidebar-contents">
+            <p class="instagram-box"></p>
+            <p class="instagram-box"></p>
+            <p class="instagram-box"></p>
+            <p class="instagram-box"></p>
+            <p class="instagram-box"></p>
+            <p class="instagram-box"></p>
           </div>
-        </div>
-        <div class="blog-item">
-          <img class="blog-image" src="img/wcc-logo.png" />
-          <div class="blog-text">
-              <p>
-              3000名のエンジニアをサポートしてきたエージェントが<br />
-              あなたの転職をサポート。
-              </p>
-            <a href="http://web-camp.io/career/"> webサイト</a>
+        </section>
+        <section class="popular">
+          <h2 class="sidebar-heading common-heading">Categories</h2>
+          <div class="sidebar-contents">
+            <p class="categories-text">Technology(15)</p>
+            <p class="categories-text">Business(23)</p>
+            <p class="categories-text">Entertainment(12)</p>
+            <p class="categories-text">Nature(32)</p>
+            <p class="categories-text">Education(9)</p>
+            <p class="categories-text">Adventure(23)</p>
+            <p class="categories-text">Communication(14)</p>
           </div>
-        </div>
+        </section>
       </div>
     </main>
+
+    <!-- footer -->
+    <footer>
+      <p class="footer-text">© All rights reserved by Infratop.Inc.</p>
+    </footer>
   </body>
 </html>
-=======
->>>>>>> 1819aa0d4936070e5692461dddf2e6b4ba6aeb58
